# micro_engine_rs

./: Cargo.toml  README.md  test.txt
assets/: static_entities.json  static_entity0.json  world.json
assets/examples/: dynamic_entities.json  static_entities.json
backups/: loader
documentation/: docs.md
examples/: animations.rs  asset_loading.rs  basic_game.rs  behave.rs  cam_mov_test_debug.rs  camera_edges_test.rs  camera_movt.rs  character_functions.rs  game.rs  gameplay.rs  line_tests.rs  messaging_test.rs  new_engine_test.rs  physics_test.rs  shooting_game.rs  texture_load.rs  texture_test.rs  vector_test.rs
examples/objects/: mod.rs
map/: map_data.json  objects.json
src/: controller.rs  definitions.rs  init_test.rs  init_world_test.rs  initializer.rs  input.rs  level.rs  lib.rs  main.rs  test_event_loop.rs  window.rs  world.rs
src/asset_loader/: mod.rs
src/camera/: mod.rs
src/core/: asset_loader.rs  behaviour.rs  camera.rs  gameobject.rs  input.rs  level.rs  math.rs  mod.rs  tile.rs
src/entity/: mod.rs  prelude.rs
src/game/: entity_manager.rs  game.rs  game_states.rs  loader.rs  mod.rs  prelude.rs
src/game_object/: mod.rs
src/math/: mod.rs
src/micro_ecs/: mod.rs
src/objects/: camera.rs  generator.rs  mod.rs  objects.rs  world.rs
src/physics/: changes.rs  collision_rect.rs  mod.rs  physics_component.rs
src/system/: AISystem.rs  AnimationSystem.rs  InputHandlingSystem.rs  MovementSystem.rs  RenderSystem.rs  mod.rs
src/test_engine/: mod.rs
src/test_object/: mod.rs  prelude.rs
src/world/: camera.rs  mod.rs  naive_tile.rs  tile.rs  (+2 more)
(+24 files in other folders)
