[package]
name = "micro_engine_rs"
version = "0.1.0"
authors = ["Cubeasaurous <yaegababa@gmail.com>",
           "Lone-coder <abhijithcheruvery@gmail.com"]
edition = "2018"

build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.sdl2]
version="0.33.0"
default-features=false
features=["image","unsafe_textures"]

[dependencies]
serde_json="1.0"
